Fixed layout issue.

--- a/css/default.device.css
+++ b/css/default.device.css
@@ -16,7 +16,7 @@
     }
 }
 
-@media (max-width: 568px) {
+@media (max-width: 783px) {
     #body-container {
         padding-top: 50px;
         margin-left: 5%;
